// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.direction === export 1`] = `
<div
  className="contact_setter flex-100 layout-row layout-wrap layout-align-center-start"
  name="contact_setter"
>
  <div
    className="flex-none content_width layout-row layout-wrap"
  >
    <div
      className="wrapper_main_h1 flex-100"
      onClick={null}
    >
      <h1>
        Set Contact Details
      </h1>
      <hr
        className="main_hr"
      />
    </div>
    <div
      className="flex-100 layout-row layout-align-center-center"
    >
      <ContactSetterBody
        consignee={Object {}}
        direction="export"
        finishBookingAttempted={false}
        notifyees={Array []}
        removeNotifyee={[Function]}
        shipper={Object {}}
        showAddressBook={[Function]}
        showEditContact={[Function]}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <hr
      className="main_hr bottom_hr"
    />
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="contact_setter flex-100 layout-row layout-wrap layout-align-center-start"
  name="contact_setter"
>
  <div
    className="flex-none content_width layout-row layout-wrap"
  >
    <div
      className="wrapper_main_h1 flex-100"
      onClick={null}
    >
      <h1>
        Set Contact Details
      </h1>
      <hr
        className="main_hr"
      />
    </div>
    <div
      className="flex-100 layout-row layout-align-center-center"
    >
      <ContactSetterBody
        consignee={Object {}}
        direction="FOO_DIRECTION"
        finishBookingAttempted={false}
        notifyees={Array []}
        removeNotifyee={[Function]}
        shipper={Object {}}
        showAddressBook={[Function]}
        showEditContact={[Function]}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <hr
      className="main_hr bottom_hr"
    />
  </div>
</div>
`;

exports[`state.showModal is true 1`] = `
<div
  className="contact_setter flex-100 layout-row layout-wrap layout-align-center-start"
  name="contact_setter"
>
  <div
    className="flex-none content_width layout-row layout-wrap"
  >
    <div
      className="wrapper_main_h1 flex-100"
      onClick={null}
    >
      <h1>
        Set Contact Details
      </h1>
      <hr
        className="main_hr"
      />
    </div>
    <div
      className="flex-100 layout-row layout-align-center-center"
    >
      <ContactSetterBody
        consignee={Object {}}
        direction="FOO_DIRECTION"
        finishBookingAttempted={false}
        notifyees={Array []}
        removeNotifyee={[Function]}
        shipper={Object {}}
        showAddressBook={[Function]}
        showEditContact={[Function]}
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <hr
      className="main_hr bottom_hr"
    />
  </div>
</div>
`;
